<resources>
    <string name="app_name">SharedPreferences</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="retrieve">Retrieve</string>
    <string name="clear">Clear</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>

</resources>