<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="240dp"
        android:layout_marginLeft="133dp"
        android:layout_marginRight="133dp"
        android:layout_marginTop="250dp"
        android:onClick="Save"
        android:text="@string/save"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btnRetr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="132dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="132dp"
        android:layout_marginBottom="100dp"
        android:onClick="Get"
        android:text="@string/retrieve" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etEmail"
        android:layout_alignRight="@+id/etEmail"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="133dp"
        android:layout_marginRight="133dp"
        android:layout_marginLeft="133dp"
        android:layout_marginBottom="30dp"
        android:onClick="clear"
        android:text="@string/clear"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/etName"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RtlHardcoded,UnusedAttribute"

        android:autofillHints="" />


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail"
        tools:ignore="RtlHardcoded"
        android:autofillHints=""
        tools:targetApi="o" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etName"
        android:layout_alignLeft="@+id/etName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="140dp"
        android:autofillHints="@string/password"
        android:textColorHint="@android:color/holo_red_light"

        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"

        tools:ignore="NotSibling,RtlHardcoded,TextFields"
        tools:targetApi="o" />

</RelativeLayout>